--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -59,7 +59,7 @@ header nav ul li:hover {
   cursor: pointer;
   text-transform: uppercase;
   font-family: "Times New Roman", Times, serif;
-  font-size: 15px;
+  font-size: 14px;
   font-weight: bold;
 }
 header section {
